fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ body {
   margin: 0;
   padding: 0;
 }
-
 #banner {
   background-color: #c6e4d6;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
+  text-align: start;
   margin: 40px auto;
   border-radius: 10px;
   padding: 40px;
@@ -23,6 +23,7 @@ body {
 
 #ban-title h3 {
   font-weight: 400;
+  text-align: start;
   font-size: 1.8em;
   color: #006a50;
   margin-bottom: 10px;
@@ -30,6 +31,7 @@ body {
 
 #ban-des h1 {
   font-size: 2.5em;
+  text-align: start;
   font-weight: 700;
   color: #333;
   line-height: 1.3;
@@ -68,10 +70,16 @@ body {
     margin: 100px 120px;
 }
 
+#vis>h1{
+    text-align: start;
+}
+
 .vis-des {
     font-size: 16px;
     color: #353535;
     margin-bottom: 30px;
+    align-items: start;
+    text-align: start;
 }
 
 .card {
@@ -138,7 +146,7 @@ img {
     margin-top: 20px;
     border: none;
     cursor: pointer;
-    text-align: center;
+    text-align: start;
     transition: background-color 0.3s ease;
 }
 
@@ -199,19 +207,26 @@ img {
     font-weight: bold;
     color: #000;
     margin-bottom: 2px;
+    text-align: start;
+
 }
 
 .quote p {
     font-size: 14px;
     color: #0E0E0E;
+    align-items: start;
+    text-align: start;
     line-height: 1.5;
     margin-bottom: 20px;
     margin-top: 2px;
+
 }
 
 
 #news{
     margin-top: 30px;
+    align-items: start;
+    text-align: start;
 }
 
 .news-card {
@@ -220,8 +235,8 @@ img {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     gap: 20px;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: start;
     width: 100%;
     max-width: 1200px;
     padding-left: 20px;
@@ -253,6 +268,13 @@ img {
     font-size: 16px;
     margin-bottom: 30px;
     color: #0E0E0E;
+    text-align: start;
+}
+.news-card h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: start;
 }
 
 .news-card2 {
@@ -331,7 +353,7 @@ section p {
 }
 
 .other-amount input {
-    width: 100%; 
+    width: 100%;
     box-sizing: border-box;
     height: 40px;
     text-align: center;
